fix bug for overflowing background and margin issues for scene view

--- a/static/editor/css/editor.css
+++ b/static/editor/css/editor.css
@@ -16,12 +16,13 @@
 
 #scene {
 	margin: auto;
-	margin-top: 4px;
-	margin-bottom: 4px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 	border: 2px solid #ddd;
 	border-radius: 4px;
 	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.075);
 	box-shadow: 0 1px 2px rgba(0,0,0,.075);
+	overflow: hidden;
 }
 
 #scene-row {
